--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-markdown": "^9.0.1",
     "shopify-buy": "^2.22.0",
     "sweetalert2": "^11.15.9",
