--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20.11.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
