--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@react-three/drei": "^9.85.0",
     "@react-three/fiber": "^8.14.3",
     "@react-three/rapier": "^1.1.1",
+    "@react-three/uikit": "^0.8.21",
+    "@react-three/uikit-apfel": "^0.8.21",
+    "@react-three/xr": "^6.6.27",
     "@shopify/hydrogen-react": "^2024.10.1",
     "@tweenjs/tween.js": "^21.0.0",
     "@types/three": "^0.171.0",
